Fixed white space

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,9 @@ GENERAL
    padding:0;
    border:0;
 }
+html{
+   overflow: hidden;
+}
 li{
    list-style: none;
 }
